test/tests/integration/helpers/fail/chats.js
//TODO: Add chats fail tests
const chatsFailTest = () => {};

module.exports = { chatsFailTest };
